Kubernets_https/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - www.grad-web-app.tk
    secretName: js-application
  rules:
  - host: www.grad-web-app.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: js-application-service
            port: 
              number: 80
